compiler/tests/compiler/must_fail/t_10.mil.exp.err
Parsing tests/compiler/must_fail/t_10.mil as MIL

tests/compiler/must_fail/t_10.mil:2:3: 2:11 error: arity of return value does not match type,expected 0, got 1
  return x;
  ^^^^^^^^^
